--- a/localisation/english/PB_Imperial_Civil_War_l_english.yml
+++ b/localisation/english/PB_Imperial_Civil_War_l_english.yml
@@ -1,6 +1,11 @@
 ﻿l_english:
 
   ######################################
+  # ALLIANCES
+  ######################################
+  Coalition_of_Independent_States:0 "Coalition of Independent States"
+
+  ######################################
   # IMPERIAL CIVIL WAR / MANAGEMENT DECISIONS
   ######################################
   PB_Irish_Secession_Crisis_Active:0 "The Irish Secession Crisis"
@@ -17,6 +22,16 @@
 
   PB_Labrador_Plebiscite_Active:0 "The Labrador Plebiscite"
 
+  AME_Impending_Imperial_Civil_War:0 "Impending Imperial Civil War"
+  Impending_Imperial_Civil_War_desc:0 ""
+
+  ######################################
+  # COSMETIC TAGS
+  ######################################
+
+  AME_Thirt_Col:0 "Thirteen Colonies"
+  AME_Thirt_Col_DEF:0 "the Thirteen Colonies"
+  AME_Thirt_Col_ADJ:0 "American"
 
   ######################################
   # IMPERIAL CIVIL WAR / MANAGEMENT EVENTS
@@ -94,6 +109,35 @@
   ImpCiv_Crisis.12.d:0 ""
   ImpCiv_Crisis.12.a:0 "Britain will proceed with annexation, then."
 
+  ImpCiv_Crisis.13.t:0 "The Final Hour"
+  ImpCiv_Crisis.13.d:0 ""
+  ImpCiv_Crisis.13.a:0 "We are with London, screw the Americans."
+  ImpCiv_Crisis.13.b:0 "Time to jump ship, let the Americans know we are with them."
+
+  ImpCiv_Crisis.14.t:0 "British Loyalists Rise Up"
+  ImpCiv_Crisis.14.d:0 "We're receiving scattered reports of unrest across New England. Several government buildings have been attacked and burned, sending secessionist supporters running. While the northernmost provinces have always been a holdout for loyalists, they were never this violent before now. British intelligence is clearly escalating the situation and activating networks of traitors who are willing to sell out the Commonwealth to London.\n\nWith the situation as unstable as it currently is, we can't spare professional troops to pacify the region in full. Local police and the RAMP will have to handle the situation as best they can."
+  ImpCiv_Crisis.14.a:0 "Traitors, the whole damn lot of them."
+
+  ImpCiv_Crisis.15.t:0 "The Bermuda Confrontation"
+  ImpCiv_Crisis.15.d:0 "Escalations continue across North America, particularly in the Caribbean where the issue of Bermuda has risen to prominence again in dramatic fashion. As the British have refused to cooperate with American naval orders in Bermuda, Commonwealth Naval Command established an exclusion zone around the island. Ships identitifed as British have, until now, stopped peacefully and allowed search for military armaments. There's been some grumbling and a few spats, but nothing terribly serious.\n\nUntil now.\n\nEarly this morning, we detected a British submarine within the exclusion zone that had failed to identify itself. As per protocol, American destroyers converged on the submarine and signalled it to surface with low yield depth charges. Rather than surface, the submarine fired on one of the destroyers and sunk it before fleeing the exclusion zone. This marks the first direct attack by British naval assets on the American military, and as such our forces have abolished the exclusion zone and begun directly targeting British naval forces around Bermuda."
+  ImpCiv_Crisis.15.a:0 "War is nearly upon us."
+
+  ImpCiv_Crisis.16.t:0 "The Last Minutes Of Peace"
+  ImpCiv_Crisis.16.d:0 "Flashpoints continue to spark throughout the empire. This evening, British and American forces in New England faced off and came away more confused than anything. Our report states that British troops were spotted outside Epping, an area near the rebelling New England provinces. Due to being directly marked as British soldiery, they were approached with caution. Despite this caution, a firefight ensued which left at least one dead from our side and possibly three to four on theirs, depending on who's being asked.\n\nRadio contact between British and American forces in the region has ceased entirely since then. Either the British have changed their codes or they're simply not interested in chit chat now. It's made it impossible to prevent conflict in the region, as no one is making any effort to coordinate. Shootouts are already being reported across the entire border, with both sides seemingly taking random pot shots at one another."
+  ImpCiv_Crisis.16.a:0 "Who Shot First?"
+
+  ImpCiv_Crisis.17.t:0 "The Imperial Civil War" # For AME
+  ImpCiv_Crisis.17.d:0 "The time for discussion has passed.\n\nIn light of provocations from Britain, the United Commonwealth parliament voted in favor of a unilateral declaration of independence. The vote came worryingly close to a tie, echoing the first Continental Congress, but after some debate an agreement was reached. As of today, the United Commonwealth has severed all ties with the British Empire and urged her associated Commonwealths to follow suit. Whether or not they do so is ultimately up to them.\n\nNaturally, Britain has rejected this declaration and countered that America is now a rebel nation. They have stated that the declaration violated the Imperial Constitution and that America's call for independence for other parts of the Empire has violated international law. A diplomatic solution has become untenable, and the British Empire now shudders in the wake of a global Imperial Civil War."
+  ImpCiv_Crisis.17.a:0 "Americans I call you to war, death to the Redcoats!"
+
+  ImpCiv_Crisis.18.t:0 "The Imperial Civil War" # For ENG
+  ImpCiv_Crisis.18.d:0 "The time for discussion has passed.\n\nThe Americans have finally exhausted our patience. The unilateral declaration of independence issued by their parliament violates the constitution of the Imperial Confederation, and that's not even speaking of their calls for rebellion to the other commonwealths.\n\nWe still have our loyalists, however, and these upstarts will be put down just like they were over a century ago. If the Americans wanted a diplomatic solution, they have indisputably made reaching one impossible."
+  ImpCiv_Crisis.18.a:0 "Let us crush this rebellious nation once and for all."
+
+  ImpCiv_Crisis.19.t:0 "Imperial Civil War Avoided" 
+  ImpCiv_Crisis.19.d:0 "Tensions have, strangely, simmered in the last few days. With the British government in turmoil, they've been unable to meaningfully counteract our calls for independence and the UDI. For all London's bluster, it seems the Anglo-American experiment has ended with a whimper rather than a bang.\n\nThe bizarre circumstances that allowed this have naturally created a national confusion, with loyalists and secessionists unable to reach a reasonable conclusion. America has gained her independence at Britain's expense, no doubt, but the circumstances of independence are bizarre to say the least."
+  ImpCiv_Crisis.19.a:0 "Thank God."
+
   ######################################
   # IMPERIAL CIVIL WAR / MANAGEMENT SCRIPTED EFFECTS & TOOLTIPS
   ######################################
@@ -129,3 +173,5 @@
 
   PB_ImpMan_Increase_ACD_AME_Influence_tt:0 "Acadiana will become more §bAmerican Aligned§!"
   PB_ImpMan_Increase_ACD_ENG_Influence_tt:0 "Acadiana will become more §rBritish Aligned§!"
+
+  AME_Impending_Imperial_Civil_War_tt:0 "A series of events will fire which will eventually kickstart the §RImperial Civil War§!.\n\nAmerican aligned states will form a counter faction against Britain, America only needs to secure the eastern seaboard and hold out for one year for a scripted peace to fire, alternatively America can invade Britain where should they be succesful they can demand additional territories."
