--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -218,6 +218,8 @@ PB_AME_White_Armaments_Laws2:0 "White Armaments Laws"
 PB_AME_Reconstruction:0 "National Reconstruction"
 PB_AME_Let_The_Traitors_Leave:0 "Let The Traitors Leave"
 PB_AME_A_New_America:0 "A New America"
+PB_AME_Improved_Agency:0 "Improved Agency"
+PB_AME_A_Better_America:0 "A Better America"
 
 ##########################
 # TRAITS
@@ -225,6 +227,13 @@ PB_AME_A_New_America:0 "A New America"
 trait_AME_Revolutionary_Hero:0 "American Revolutionary Hero"
 trait_AME_Revolutionary_Hero_desc:0 ""
 PB_The_First_American:0 "The First American"
+PB_Leader_Of_The_Free_World:0 "Leader Of The Free World"
+
+##########################
+# ABILITIES
+##########################
+AME_Undying_Patriotism:0 "Undying Patriotism"
+PB_AME_Undying_Patriotism_tt:0 "\nUnlocks the §HUndying Patriotism§! ability, which is an improved version of the §YForce Attack§! ability\n\n"
 
 ##########################
 # TECHNOLOGIES
@@ -541,8 +550,8 @@ PB_AME_Us_Or_Them:0 "Us Or Them"
 PB_AME_Us_Or_Them_desc:0 ""
 PB_AME_Honor_Our_Forefathers:0 "Honor Our Forefathers"
 PB_AME_Honor_Our_Forefathers_desc:0 ""
-PB_AME_Promote_Republicanism:0 "Promote Republicansim"
-PB_AME_Promote_Republicanism_desc:0 ""
+PB_AME_Expand_Our_Networks:0 "Expand Our Networks"
+PB_AME_Expand_Our_Networks_desc:0 ""
 PB_AME_The_Better_America:0 "The Better America"
 PB_AME_The_Better_America_desc:0 ""
 PB_AME_Undying_Patriotism:0 "Undying Patriotism"
@@ -1147,6 +1156,9 @@ PB_AME_In_The_Footsteps_Of_Giants_tt:0 "The §YUnited Commwealth§! will become 
 PB_AME_The_American_Kingdom_tt:0 "The §YUnited Commwealth§! will become a §HConstitutional Monarchy§!\n\n"
 
 PB_AME_Bulwark_Against_Imperialism_tt:0 "Every §Ycoastal§! province in the country will gain a series of §HNaval Forts§!\n\n"
+PB_AME_Expand_Our_Networks_tt:0 "Every non-core §HState§!:"
+PB_AME_Remit_Anti_Monarch_Measures_tt:0 "Any §HGenerals§! that defected to §RLondon§! will be §Ypardoned§! and will be allowed to return to service this great nation\n\n"
+PB_AME_Dissolve_The_Royal_Houses_tt:0 "Any §HGenerals§! that defected to §RLondon§! will be considered §Yenemies of the state§! and will remain in service of Imperial Britian\n\n"
 
 ##########################
 # PUPPET AUTONOMY
