--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -934,6 +934,22 @@
   PBNews.236.d:0 "After years of unrest simmering beneath the surface, the Tejano-Americans have made themselves known in explosive fashion. The English speaking minority in Tejas has long pushed against the predominantly Catholic, Spanish speaking majority that dominates the Tejano legislative assembly. Said assembly failed to reach a resolution on the issue of American immigrant voting rights, leaving the situation in limbo and enraging Anglo-American nativists.\n\nClashes between the Tejano army and the Texan militias continue as both sides look to the East, waiting to see how Philadelphia will react."
   PBNews.236.a:0 "A house divided cannot stand."
 
+  PBNews.238.t:0 "THE FINAL HOUR"
+  PBNews.238.d:0 "The British Empire is at this very moment on the brink of outright war with its once greatest ally, and now greatest rival, the United Commonwealth of America. After months if not years of increasing Imperial tension between the two world powers it seems diplomacy has once again failed the globe as America and Great Britain ready themselves for what is likely to be the defining war of the century. Already militias are being mustered and reports of the first shots of war are being heard. Commonwealths that are under intense American economic influence will likely side with Philly but for what remains for the rest of the empire remains uncertain."
+  PBNews.238.a:0 "An empire divided against itself cannot stand."
+
+  PBNews.239.t:0 "IMPERIAL CIVIL WAR"
+  PBNews.239.d:0 "In a shock to many who has assumed that a war between the United Commonwealth and Britain was guaranteed to take place the opposite has in fact happened. Due to the current unfortunate circumstances the British Empire is currently facing British diplomats in the United Commonwealth have bent the knee to America calls for independence. While war within the Empire may have been avoided today the future of Europe and the globe for that matter remains unknown, but someone will fill  the void left behind from the empire of old, it is simply a matter of time."
+  PBNews.239.a:0 "Yesterday brothers, today enemies, tomorrow, well who knows."
+
+  PBNews.240.t:0 "IMPERIAL CIVIL WAR AVOIDED"
+  PBNews.240.d:0 "In a shock to many who has assumed that a war between the United Commonwealth and Britain was guaranteed to take place the opposite has in fact happened. Due to the current unfortunate circumstances the British Empire is currently facing British diplomats in the United Commonwealth have bent the knee to America calls for independence. While war within the Empire may have been avoided today the future of Europe and the globe for that matter remains unknown, but someone will likely take over the void left behind from the empire of old."
+  PBNews.240.a:0 "The world has narrowly dodged a bullet today, a very big bullet."
+
+  PBNews.241.t:0 "BRITAIN VICTORIOUS"
+  PBNews.241.d:0 ""
+  PBNews.241.a:0 "The empire endures, bloody and beaten."
+
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
   stockcrisis.1.a:0 "Oh dear"
