--- a/localisation/english/PB_factions_l_english.yml
+++ b/localisation/english/PB_factions_l_english.yml
@@ -50,3 +50,6 @@
 
   FACTION_HAMBURG_LEAGUE:0 "§YMember of the Hamburg League§!"
   FACTION_HAMBURG_LEAGUE_LONG:0 "This nation is a member of the §YHamburg League§!, a military alliance formed between by the United Kingdoms of Germany with the goal of protecting stability and democracy in Europe. Essentially a front to counter French Expansionism and Russian adventurism, where minor nations can receive protection and support from Frankfurt. The alliance is closely in contact with Great Britian and is maybe the first step to European Unity."
+
+  FACTION_CIS:0 "§YMember of the Coalition Of Independent States§!"
+  FACTION_CIS_LONG:0 "This nation is a member of the §YCoalition Of Independent States§!, a military alliance formed by America with the goal of protecting stability and democracy across the globe, although it specifically in recent times has targeted the commonwealths and dominions of the British Empire . Essentially a front to counter British Expansionism, where minor nations can receive protection and support from Philadelphia." 
