--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -951,8 +951,12 @@
   PBNews.240.a:0 "The world has narrowly dodged a bullet today, a very big bullet."
 
   PBNews.241.t:0 "BRITAIN VICTORIOUS"
-  PBNews.241.d:0 ""
+  PBNews.241.d:0 "The Union Jack was hoisted high over Philadelphia today as fighting between the last Commonwealth forces and London came to a sudden end. With most of the Coalition of Independent States relying on material and military support from the United Commonwealth all parties within said alliance came to the quick decision to secure favourable peace terms with Britain. It came as no surprise that Britain and her remaining empire demanded that the current members of the C.I.S unconditionally surrender to the empire where they would be in due time reintegrated. With no hope of victory, the remnants of the C.I.S have agreed to London’s demands."
   PBNews.241.a:0 "The empire endures, bloody and beaten."
+
+  PBNews.242.t:0 "AMERICA VICTORIOUS"
+  PBNews.242.d:0 "The Imperial Civil War came to a decisive end today as the British public’s fading appetite for the war across the Atlantic Ocean forced British delegates in Philadelphia to the negotiating table with the Coalition of Independent States. The original stipulations put forward by America during their declaration of independence were agreed upon by London as well as some other additional territorial demands. Notably the transfer of Bermuda to American occupation. Military parades across America and the C.I.S have taken place but the same cannot be said for the now crumbling Anglo empire. "
+  PBNews.242.a:0 "Anglo hegemony continues but with a new face and flag."
 
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
