Imperial Civil War almost done

--- a/localisation/english/PB_Britain_l_english.yml
+++ b/localisation/english/PB_Britain_l_english.yml
@@ -1136,45 +1136,45 @@
   # IMPERIAL MANAGEMENT SYSTEM
   ######################################
   PB_ENG_Imperial_Management:0 "The Imperial Confederation"
-  PB_ENG_Imperial_Management_desc:0 "\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\nThe current outlook of Imperial Reform is [get_reform_outlook]\n\nImperial Tension is currently at §O[?global.ENG_Empire_Tension]%§!\n\nThe modern Imperial Confederation is the product of more than a century of reforms, regressions and compromises keeping the British Empire together. Initially formed following the Acts of Autonomy that created the United Dominions, the Confederation has gradually expanded to transform the Empire into a supernational alliance of nations united beneath the British crown.\n\nWith the seat of the Imperial Parliament in London, Great Britain is able to manage many of the Confederations economic and research affairs, including where and how to manage budgetary resources.\n\n[QUE.GetFlag] Quebec is [get_imperial_sphere_quebec]\n[WAF.GetFlag] Carnegia is [get_imperial_sphere_carnegia]\n[VIC.GetFlag] Victoria is [get_imperial_sphere_victoria]\n[BCL.GetFlag] The Northwest Territory is [get_imperial_sphere_borealia]\n[IRE.GetFlag] Ireland is [get_imperial_sphere_ireland]\n[HNK.GetFlag] Hong Kong is [get_imperial_sphere_hongkong]\n[BAF.GetFlag] The British African Authority is [get_imperial_sphere_westafrica]\n[BFE.GetFlag] East Africa is [get_imperial_sphere_eastafrica]\n[ACD.GetFlag] Acadiana is [get_imperial_sphere_acadiana]"
+  PB_ENG_Imperial_Management_desc:0 "\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\nThe current outlook of Imperial Reform is [get_reform_outlook]\n\nImperial Tension is currently at §O[?global.ENG_Empire_Tension]%§!\n\nThe modern Imperial Confederation is the product of more than a century of reforms, regressions and compromises keeping the British Empire together. Initially formed following the Acts of Autonomy that created the United Dominions, the Confederation has gradually expanded to transform the Empire into a supernational alliance of nations united beneath the British crown.\n\nWith the seat of the Imperial Parliament in London, Great Britain is able to manage many of the Confederations economic and research affairs, including where and how to manage budgetary resources.\n\nDominions and Commonwealths represented below have their geo-political alignment measured by a percentage variable. If a nation has an alignment percentage of §Y0%§! to §Y<50%§! they will be aligned within the British sub faction within the Empire. From §Y50%>§! to §Y100%§! such nation(s) will be aligned within the American sub faction within the Empire. All other nations within the Empire not represented on the list below will always side with Britain should an Imperial Civil War breakout. Countries on the list that are neutral will also side with Britain.\n\n[QUE.GetFlag] Quebec is [get_imperial_sphere_quebec]\n[WAF.GetFlag] Carnegia is [get_imperial_sphere_carnegia]\n[VIC.GetFlag] Victoria is [get_imperial_sphere_victoria]\n[BCL.GetFlag] The Northwest Territory is [get_imperial_sphere_borealia]\n[IRE.GetFlag] Ireland is [get_imperial_sphere_ireland]\n[HNK.GetFlag] Hong Kong is [get_imperial_sphere_hongkong]\n[BAF.GetFlag] The British African Authority is [get_imperial_sphere_westafrica]\n[BFE.GetFlag] East Africa is [get_imperial_sphere_eastafrica]\n[ACD.GetFlag] Acadiana is [get_imperial_sphere_acadiana]"
   PB_Promote_Imperial_Reformism:0 "£Generic_Red_Arrow Promote Imperial Reformism"
   PB_Promote_Imperial_Conservatism:0 "£Generic_Blue_Arrow Promote Imperial Conservatism"
 
-  PB_Quebec_Pro_American:0 "§bAmerican Aligned§!"
-  PB_Quebec_Pro_British:0 "§rBritish Aligned§!"
-  PB_Quebec_Neutral:0 "§YNeutral§!"
+  PB_Quebec_Pro_American:0 "§bAmerican Aligned§!  ( ~[?QUE.ImpManagement_QUE]% )"
+  PB_Quebec_Pro_British:0 "§rBritish Aligned§!  ( ~[?QUE.ImpManagement_QUE]% )"
+  PB_Quebec_Neutral:0 "§YNeutral§!  ( ~[?QUE.ImpManagement_QUE]% )"
 
-  PB_Carnegia_Pro_American:0 "§bAmerican Aligned§!"
-  PB_Carnegia_Pro_British:0 "§rBritish Aligned§!"
-  PB_Carnegia_Neutral:0 "§YNeutral§!"
+  PB_Carnegia_Pro_American:0 "§bAmerican Aligned§!  ( ~[?WAF.ImpManagement_WAF]% )"
+  PB_Carnegia_Pro_British:0 "§rBritish Aligned§!  ( ~[?WAF.ImpManagement_WAF]% )"
+  PB_Carnegia_Neutral:0 "§YNeutral§!  ( ~[?WAF.ImpManagement_WAF]% )"
 
-  PB_Victoria_Pro_American:0 "§bAmerican Aligned§!"
-  PB_Victoria_Pro_British:0 "§rBritish Aligned§!"
-  PB_Victoria_Neutral:0 "§YNeutral§!"
+  PB_Victoria_Pro_American:0 "§bAmerican Aligned§!  ( ~[?VIC.ImpManagement_VIC]% )"
+  PB_Victoria_Pro_British:0 "§rBritish Aligned§!  ( ~[?VIC.ImpManagement_VIC]% )"
+  PB_Victoria_Neutral:0 "§YNeutral§!  ( ~[?VIC.ImpManagement_VIC]% )"
 
-  PB_Borealia_Pro_American:0 "§bAmerican Aligned§!"
-  PB_Borealia_Pro_British:0 "§rBritish Aligned§!"
-  PB_Borealia_Neutral:0 "§YNeutral§!"
+  PB_Borealia_Pro_American:0 "§bAmerican Aligned§!  ( ~[?BCL.ImpManagement_BCL]% )"
+  PB_Borealia_Pro_British:0 "§rBritish Aligned§!  ( ~[?BCL.ImpManagement_BCL]% )"
+  PB_Borealia_Neutral:0 "§YNeutral§!  ( ~[?BCL.ImpManagement_BCL]% )"
 
-  PB_Ireland_Pro_American:0 "§bAmerican Aligned§!"
-  PB_Ireland_Pro_British:0 "§rBritish Aligned§!"
-  PB_Ireland_Neutral:0 "§YNeutral§!"
+  PB_Ireland_Pro_American:0 "§bAmerican Aligned§!  ( ~[?IRE.ImpManagement_IRE]% )"
+  PB_Ireland_Pro_British:0 "§rBritish Aligned§!  ( ~[?IRE.ImpManagement_IRE]% )"
+  PB_Ireland_Neutral:0 "§YNeutral§!  ( ~[?IRE.ImpManagement_IRE]% )"
 
-  PB_HongKong_Pro_American:0 "§bAmerican Aligned§!"
-  PB_HongKong_Pro_British:0 "§rBritish Aligned§!"
-  PB_HongKong_Neutral:0 "§YNeutral§!"
+  PB_HongKong_Pro_American:0 "§bAmerican Aligned§!  ( ~[?HNK.ImpManagement_HNK]% )"
+  PB_HongKong_Pro_British:0 "§rBritish Aligned§!  ( ~[?HNK.ImpManagement_HNK]% )"
+  PB_HongKong_Neutral:0 "§YNeutral§!  ( ~[?HNK.ImpManagement_HNK]% )"
 
-  PB_WestAfrica_Pro_American:0 "§bAmerican Aligned§!"
-  PB_WestAfrica_Pro_British:0 "§rBritish Aligned§!"
-  PB_WestAfrica_Neutral:0 "§YNeutral§!"
+  PB_WestAfrica_Pro_American:0 "§bAmerican Aligned§!  ( ~[?BAF.ImpManagement_BAF]% )"
+  PB_WestAfrica_Pro_British:0 "§rBritish Aligned§!  ( ~[?BAF.ImpManagement_BAF]% )"
+  PB_WestAfrica_Neutral:0 "§YNeutral§!  ( ~[?BAF.ImpManagement_BAF]% )"
 
-  PB_EastAfrica_Pro_American:0 "§bAmerican Aligned§!"
-  PB_EastAfrica_Pro_British:0 "§rBritish Aligned§!"
-  PB_EastAfrica_Neutral:0 "§YNeutral§!"
+  PB_EastAfrica_Pro_American:0 "§bAmerican Aligned§!  ( ~[?BEF.ImpManagement_BEF]% )"
+  PB_EastAfrica_Pro_British:0 "§rBritish Aligned§!  ( ~[?BEF.ImpManagement_BEF]% )"
+  PB_EastAfrica_Neutral:0 "§YNeutral§!  ( ~[?BEF.ImpManagement_BEF]% )"
 
-  PB_Acadiana_Pro_American:0 "§bAmerican Aligned§!"
-  PB_Acadiana_Pro_British:0 "§rBritish Aligned§!"
-  PB_Acadiana_Neutral:0 "§YNeutral§!"
+  PB_Acadiana_Pro_American:0 "§bAmerican Aligned§!  ( ~[?ACD.ImpManagement_ACD]% )"
+  PB_Acadiana_Pro_British:0 "§rBritish Aligned§!  ( ~[?ACD.ImpManagement_ACD]% )"
+  PB_Acadiana_Neutral:0 "§YNeutral§!  ( ~[?ACD.ImpManagement_ACD]% )"
 
   PB_ENG_Reform_Outlook_Neutral:0 "§YNeutral§!"
   PB_ENG_Reform_Outlook_Moderate_Reform:0 "§rModerately Reformist§!"
