--- a/localisation/english/PB_Imperial_Civil_War_l_english.yml
+++ b/localisation/english/PB_Imperial_Civil_War_l_english.yml
@@ -10,15 +10,27 @@
   ######################################
   PB_Irish_Secession_Crisis_Active:0 "The Irish Secession Crisis"
 
-  PM_AME_American_Irish_Advisors:0 "Provide American Military Advisors in Ireland"
+  PM_AME_American_Irish_Advisors:0 "Provide American Military Advisors In Ireland"
   PM_AME_American_Quebec_Advisors:0 "Provide American Military Advisors to Quebec"
-  PM_AME_American_Northwest_Investment:0 "Invest in the Northwest Territories"
-  PM_AME_American_African_Investment:0 "Invest in the Saharan Colonies"
+  PM_AME_American_Northwest_Investment:0 "Invest In The Northwest Territories"
+  PM_AME_American_African_Investment:0 "Invest In The Saharan Colonies"
+  PM_AME_American_Quebec_Investment:0 "Invest In Quebec"
+  PM_AME_American_Victoria_Investment:0 "Promote American-Victorian Pacific Trade"
+  PM_AME_American_Hong_Kong_Investment:0 "Reinforce The Pearl River Dominion"
+  PM_AME_American_BAF_Investment:0 "Promote Trade With The British African Authority"
+  PM_AME_American_East_Africa_Investment:0 "Reinforce American Interests In East Africa"
+  PM_AME_American_Acadiana_Investment:0 "Secure Our Influence In Acadia"
 
   PM_ENG_Promote_Anglo_Irish_Unity:0 "Promote Anglo-Irish Unity"
-  PM_ENG_Trade_with_Quebec:0 "Offer Economic Incentives to Quebec"
-  PM_ENG_Northwest_Investment:0 "Invest in the Northwest Territories"
-  PM_ENG_Saharan_Investment:0 "Increase investment in the Sahara Project"
+  PM_ENG_Trade_with_Quebec:0 "Offer Economic Incentives To Quebec"
+  PM_ENG_Northwest_Investment:0 "Invest In the Northwest Territories"
+  PM_ENG_Saharan_Investment:0 "Increase investment In The Sahara Project"
+  PM_ENG_Quebec_Investment:0 "Invest In Quebec"
+  PM_ENG_Victoria_Investment:0 "Reinforce Anglo-Victorian Trade Ties"
+  PM_ENG_Hong_Kong_Investment:0 "Secure Our Foothold In Asia"
+  PM_ENG_BAF_Investment:0 "Offer Economic Incentives To The BAF"
+  PM_ENG_East_Africa_Investment:0 "Consolidate Our Position In East Africa"
+  PM_ENG_Acadia_Investment:0 "Offer Economic Incentives To Acadia"
 
   PB_Labrador_Plebiscite_Active:0 "The Labrador Plebiscite"
 
