--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -237,6 +237,8 @@ PB_AME_Nation_of_Tomorrow_idea:0 "The Nation of Tomorrow"
 ##########################
 trait_AME_Revolutionary_Hero:0 "American Revolutionary Hero"
 trait_AME_Revolutionary_Hero_desc:0 ""
+trait_AME_British_Loyalties:0 "British Loyalties"
+trait_AME_British_Loyalties_desc:0 "This general is loyal to the British Empire, if we were to declare independence against Britain this general would more than likely defect to London."
 PB_The_First_American:0 "The First American"
 PB_Leader_Of_The_Free_World:0 "Leader Of The Free World"
 
