Imperial Civil War coring events

--- a/localisation/english/PB_Britain_l_english.yml
+++ b/localisation/english/PB_Britain_l_english.yml
@@ -858,6 +858,7 @@
   ENG_Turing_Computer:0 "The Turing Project"
   ENG_Turing_Computer_2:0 "The Turing Project"
   ENG_Turing_Computer_3:0 "The Turing Thinker"
+  ENG_Integration_Chaos:0 "Integration Chaos"
 
   ENG_Commonwealth_Development_Funding:0 "Commonwealth Development Programme"
   ENG_Commonwealth_Research_Funding:0 "Commonwealth Research Assistance"
