Imperial Civil War is almost done

--- a/localisation/english/PB_Imperial_Civil_War_l_english.yml
+++ b/localisation/english/PB_Imperial_Civil_War_l_english.yml
@@ -230,3 +230,6 @@
   Imp_War_AME_Vic_tt:0 "The §YUnited Commonwealth§! and its allies will sign a peace deal with §RBritain§! which will see the transfer of some British colonial lands to the UC and a total seperation of all §YC.I.S§! members from British affairs."
 
   ENG_Imperial_Federation_Coring_Begin_tt:0 "§YWith this decision, the Imperial Federation is signed into existence, although we will not have all lands fully integrated upon creation. Events will appear over the course of the subsequent year fully integrating our former Commonwealths.§!"
+
+  PB_Imp_90_Tension_Limit:0 "Imperial Tension is over §Y90%§!"
+  PB_Imp_90_Tension_Limit_Under:0 "Imperial Tension is under §Y90%§!"
