--- a/localisation/english/PB_Imperial_Civil_War_l_english.yml
+++ b/localisation/english/PB_Imperial_Civil_War_l_english.yml
@@ -48,6 +48,30 @@
   AME_Thirt_Col_DEF:0 "the Thirteen Colonies"
   AME_Thirt_Col_ADJ:0 "American"
 
+  QUE_Republic:0 "United Quebec Republic"
+  QUE_Republic_DEF:0 "the United Quebec Republic"
+  QUE_Republic_ADJ:0 "Québécois"
+
+  WAF_Republic:0 "Free State of Carnegia"
+  WAF_Republic_DEF:0 "the Free State of Carnegia"
+  WAF_Republic_ADJ:0 "Afro-European"
+
+  VIC_Republic:0 "Victorian Republic"
+  VIC_Republic_DEF:0 "the Victorian Republic"
+  VIC_Republic_ADJ:0 "Australian"
+
+  BCL_Republic:0 "Free Provinces of Borealia"
+  BCL_Republic_DEF:0 "the Free Provinces of Borealia"
+  BCL_Republic_ADJ:0 "Borealian"
+
+  IRE_Republic:0 "Ireland"
+  IRE_Republic_DEF:0 "Ireland"
+  IRE_Republic_ADJ:0 "Irish"
+
+  HNK_Republic:0 "Pearl-River Confederation"
+  HNK_Republic_DEF:0 "the Pearl-River Confederation"
+  HNK_Republic_ADJ:0 "Euro-Asiatic"
+
   ######################################
   # IMPERIAL CIVIL WAR / MANAGEMENT EVENTS
   ######################################
