--- a/localisation/english/PB_Imperial_Civil_War_l_english.yml
+++ b/localisation/english/PB_Imperial_Civil_War_l_english.yml
@@ -72,6 +72,18 @@
   HNK_Republic_DEF:0 "the Pearl-River Confederation"
   HNK_Republic_ADJ:0 "Euro-Asiatic"
 
+  BAF_Republic:0 "United Provinces of West Africa"
+  BAF_Republic_DEF:0 "the United Provinces of West Africa"
+  BAF_Republic_ADJ:0 "Afro-European"
+
+  BEF_Republic:0 "United Provinces of East Africa"
+  BEF_Republic_DEF:0 "the United Provinces of East Africa"
+  BEF_Republic_ADJ:0 "Afro-European"
+
+  ACD_Republic:0 "Acadia"
+  ACD_Republic_DEF:0 "Acadia"
+  ACD_Republic_ADJ:0 "Acadian"
+
   ######################################
   # IMPERIAL CIVIL WAR / MANAGEMENT EVENTS
   ######################################
@@ -257,3 +269,10 @@
 
   PB_Imp_90_Tension_Limit:0 "Imperial Tension is over §Y90%§!"
   PB_Imp_90_Tension_Limit_Under:0 "Imperial Tension is under §Y90%§!"
+
+  PB_Imp_Commonwealths_Decide_AME:0 "You will side with America in the coming revolution and join the Coalition of Independent States"
+
+  PB_Imp_Commonwealths_Decide_ENG:0 "You will side with Britain in the coming revolution"
+
+  PB_BAF_CON:0 "The British African Authority has been dissolved"
+  PB_BAF_REF:0 "The British African Authority has been dissolved"
