Automats no longer starting suppression unit

--- a/localisation/english/PB_equipment_l_english.yml
+++ b/localisation/english/PB_equipment_l_english.yml
@@ -22,7 +22,8 @@
  convoy_desc:0 "Convoys used for international trade of goods and resources. Also used to ferry troops around and for performing naval invasions."
  sh_battleship:0 "Superheavy Battleship"
  sh_battleship_desc:0 "The largest capital ship with the biggest guns and strongest armor that money can buy. Such an expensive investment deserves proper support of smaller screening ships."
-
+ armored_car_equipment:0 "Armored Car"
+ armored_car_equipment_desc:0 "Light-weight armored wheeled vehicles. Common for reconnaissance and resistance suppression, but can be fitted with heavier armaments." 
  gw_tank_equipment:0 "Great War Landship"
  gw_tank_equipment_short:0 "Great War Landship"
  gw_tank_equipment_desc:0 "Landships in World War I were developed separately and simultaneously by the United Kingdom and France as a means to break the deadlock of trench warfare on the Western Front. The name Landship was adopted by the British during the early stages of their development, as a security measure to conceal their purpose. Early landships were armed with machineguns and small cannons, moved slowly, and were armored only enough to stop small arms fire."
