--- a/localisation/english/PB_Technologies_l_english.yml
+++ b/localisation/english/PB_Technologies_l_english.yml
@@ -289,6 +289,9 @@
  mmhorrors_folder:0 "Augments and Unorthodox Technologies"
  mmhorrors_folder_desc:0 "§Y\"Why then cannot we cut one code short here, and start another there? Is life so fragile that it can withstand no tampering? Does the sacred brook no improvement?\"§!\n\nThe cutting edge of Biotechnics, Technosapianism and the unhinged sciences, ready for deployment against our unfortunate enemies."
 
+ heli_techs_folder:0 "Heli Support"
+ heli_techs_folder_desc:0 "Heli Support"
+
  combatagate_1:0 "Combatagate Primordial Forms"
  combatagate_1_desc:0 "Created in the 1920s due to failed cattle yield experiments, Combatagates function as biological shock cavalry. The creatures are released on the enemy in a highly agitated state, and after between twelve to fourteen hours will die from organ failure via an imprinted biological timer, requiring little cleanup or need for extermination."
  combatagate_upgrade_1:0 "Muscle Growth Factor"
