--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -251,6 +251,9 @@ PB_AME_Social_Credit_Agrarians_Full:0 "SoCred Party: Agrarians Dominant"
 PB_AME_Social_Credit_Technocrats:0 "A Technolabourite SoCred Party"
 PB_AME_Social_Credit_Technocrats_Full:0 "SoCred Party: Technocrats Dominant"
 
+PB_AME_The_Giant_Wakes:0 "The Giant Wakes"
+PB_AME_Bulwark_Against_Extremism:0 "Bulwark Against Extremism"
+
 ##########################
 # TRAITS
 ##########################
@@ -1273,6 +1276,8 @@ PB_AME_Brightest_Minds_of_the_Commonwealth_tt:0 "We will have access to a number
 
 PB_AME_Promote_Population_Control_tt:0 "§YOnce chosen, this will begin the process of encouraging population movement out of the Melbourne Supercolony to other regions of the Commonwealth. While unpopular, this will reduce the population burden of the Megacity and allow us to succesfully redevelop it for future generations.§!"
 PB_AME_National_Alcohol_Ban_tt:0 "£decision_icon_small §RLiterally Everyone Opposes this Policy§!"
+
+AME_Won_Imp_War:0 "Has won the Imperial Civil War"
 
 ##########################
 # PUPPET AUTONOMY
