--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -311,6 +311,12 @@
   SCA_Core_942_desc:0 "Let us integrate our newly liberated lands into our revolutionary way of life and thinking. We must remind ourselves that this revolution is after all a global revolution as much as it is an American one."
   SCA_Core_392:0 "Core Aiouez"
   SCA_Core_392_desc:0 "Let us integrate our newly liberated lands into our revolutionary way of life and thinking. We must remind ourselves that this revolution is after all a global revolution as much as it is an American one."
+  SCA_Core_948:0 "Core Stephens"
+  SCA_Core_948_desc:0 "Let us integrate our newly liberated lands into our revolutionary way of life and thinking. We must remind ourselves that this revolution is after all a global revolution as much as it is an American one."
+  SCA_Core_941:0 "Core Kansas"
+  SCA_Core_941_desc:0 "Let us integrate our newly liberated lands into our revolutionary way of life and thinking. We must remind ourselves that this revolution is after all a global revolution as much as it is an American one."
+  SCA_Core_373:0 "Core Jackson"
+  SCA_Core_373_desc:0 "Let us integrate our newly liberated lands into our revolutionary way of life and thinking. We must remind ourselves that this revolution is after all a global revolution as much as it is an American one."
 
   # Seven Deadly Sins
 
