--- a/localisation/english/PB_Mexico_l_english.yml
+++ b/localisation/english/PB_Mexico_l_english.yml
@@ -82,7 +82,7 @@
   MEX_Increase_All_Loyalty_tt:0 "All state Loyalty: §G+2%§!"
   MEX_Decrease_All_Loyalty_tt:0 "All state Loyalty: §R-2%§!"
 
-  PB_MEX_The_Century_Proclamation_tt:0 "All state loyalty is above §H25%§!"
+  PB_MEX_The_Century_Proclamation_tt:0 "All state loyalty is above §H19%§!"
 
   PB_MEX_Invite_Foreign_Industrialists_tt:0 "For every state that is §HLoyal§! gain one civilian factory:\n\n"
   PB_MEX_Invite_Foreign_Industrialists_2_tt:0 "\nThis national spirit will be removed if we are in a state of war."
@@ -585,3 +585,7 @@
   #mexico.32.t:0 "Massacre Investigation"
   #mexico.32.d:0 "WIP"
   #mexico.32.a:0 "This Is Outrageous!"
+
+  mexico_crisis.1.t:0 "The April Crisis"
+  mexico_crisis.1.d:0 "As the election results have poured in the Junta’s suspicion of a Jacobin electoral victory has been validated, as the last of the ballots were counted the military already begun making moves to secure government departments of vital importance. Jacobin political leaders were arrested on mass and only a handful of democratic governors and members of government were allowed to stay in their positions of power. The April Crisis that many had feared coming is now well under way. "
+  mexico_crisis.1.a:0 "As if things couldn't get worse."
