--- a/localisation/english/PB_Mexico_l_english.yml
+++ b/localisation/english/PB_Mexico_l_english.yml
@@ -267,6 +267,10 @@
   MEX_Grand_Empire_DEF:0 "the Grand Empire of Mexico"
   MEX_Grand_Empire_ADJ:0 "Mexican"
 
+  MEX_Imperium:0 "Mexican Imperium"
+  MEX_Imperium_DEF:0 "the Mexican Imperium"
+  MEX_Imperium_ADJ:0 "Mexican"
+
   MEX_Greater_Mexico:0 "Greater Mexican National State"
   MEX_Greater_Mexico_DEF:0 "the Greater Mexican National State"
   MEX_Greater_Mexico_ADJ:0 "Mexican"
@@ -347,24 +351,6 @@
 
   PB_MEX_Restore_The_Academia:0 "Restore The Academia"
   PB_MEX_Restore_The_Academia_desc:0 "Despite our best efforts to halt the fleeing of Mexican intellectuals a new problem has arisen. Many refuse to partake in the political process of the nation of any major industrial sectors out of fear. Families of middle-class Mexicans and even some elites have taken to laborious jobs to avoid the eye of Mexico. Why incentivizing and reassuring such people that they are of no interest to the government we may be able to convince them to join and expand Mexico’s lacking education sector."
-
-  PB_MEX_Reaffirm_The_Tordesiallas_Treaty:0 "Reaffirm The Tordesiallas Treaty"
-  PB_MEX_Reaffirm_The_Tordesiallas_Treaty_desc:0 ""
-
-  PB_MEX_The_New_Mexican_Man:0 "The New Mexican Man"
-  PB_MEX_The_New_Mexican_Man_desc:0 ""
-
-  PB_MEX_A_Middle_Class_Utopia:0 "A Middle Class Utopia"
-  PB_MEX_A_Middle_Class_Utopia_desc:0 ""
-
-  PB_MEX_Gustavos_Finest:0 "Gustavo's Finest"
-  PB_MEX_Gustavos_Finest_desc:0 ""
-
-  PB_MEX_The_Greatest_Threat_To_Civilization:0 "The Greatest Threat To Civilization"
-  The_Greatest_Threat_To_Civilization_desc:0 ""
-
-  PB_MEX_Indoctrination_For_The_Weakest_Minds:0 "Indoctrination For The Weakest Minds"
-  Indoctrination_For_The_Weakest_Minds_desc:0 ""
 
   PB_MEX_Reignite_Imperial_Fervor:0 "Reignite Imperial Fervor"
   PB_MEX_Reignite_Imperial_Fervor_desc:0 "If we plan on reclaiming our lost empire, then every man and women must dedicate themselves to the upcoming war. Factories must be filled and weapons must be made if we truly wish to rid this world of all those who have attempted to steer our nation away from our god given right to empire."
@@ -451,7 +437,7 @@
   PB_MEX_Southern_Consolidation_desc:0 ""
 
   PB_MEX_The_Mexican_Pheonix:0 "The Mexican Pheonix"
-  PB_MEX_The_Mexican_Pheonix_desc:0 ""
+  PB_MEX_The_Mexican_Pheonix_desc:0 "Few believed that the Empire of Mexico could reclaim its lost legacy and yet here we stand, united and ready for all who wish to depose us of our rejuvenated cause. The Empire of Mexico has once and for all proven its worth to the world, and we have the emperor to thank for this reality. Long live the emperor, long live the Grand Empire of Mexico."
 
   ##########################
   # EVENTS
